--- a/index.html
+++ b/index.html
@@ -32,26 +32,15 @@
     <!-- Hero Section -->
     <section class="hero container">
       <h1 class="hero__name">Kayleigh Gomez</h1>
-      <p class="hero__subtitle">Where research meets real-world adherence</p>
+      <p class="hero__subtitle">Research-Informed Systems for Real-World Adherence</p>
       <p class="hero__credential">B.S. Public Health</p>
       <p class="hero__summary">
-        Building systems-based fitness frameworks that help women develop sustainable, 
-        long-term exercise habits.
+        Systems-based frameworks for long-term fitness adherence in women.
       </p>
       <div class="hero__actions">
         <a href="work.html" class="btn btn--primary">View Work</a>
         <a href="shop.html" class="btn">Shop</a>
       </div>
-    </section>
-
-    <!-- What I Publish Section -->
-    <section class="section container">
-      <h2 class="section__title">What I Publish</h2>
-      <ul class="bullet-list">
-        <li class="bullet-list__item">Research-informed frameworks</li>
-        <li class="bullet-list__item">Practical behavior-change tools</li>
-        <li class="bullet-list__item">Program systems designed for long-term adherence</li>
-      </ul>
     </section>
 
   </main>
