--- a/work.html
+++ b/work.html
@@ -45,28 +45,26 @@
 
         <!-- Project 1 -->
         <article class="project-card">
-          <h2 class="project-card__title">The Adherence Ecosystem</h2>
-          <p class="project-card__description">
-            A systems-based framework examining why linear fitness models fail women 
-            and how adherence can be designed instead.
-          </p>
-          <div class="project-card__links">
-            <a href="#" class="project-card__link">Read (Interactive)</a>
-            <a href="#" class="project-card__link">Download PDF</a>
-          </div>
+          <a href="project-template.html" class="project-card__link">
+            <h2 class="project-card__title">The Adherence Ecosystem</h2>
+            <p class="project-card__description">
+              A systems-based framework examining why linear fitness models fail women 
+              and how adherence can be designed instead.
+            </p>
+          </a>
+          <a href="project-template.html" class="project-card__cta">View Project →</a>
         </article>
 
         <!-- Project 2 -->
         <article class="project-card">
-          <h2 class="project-card__title">Designing for Consistency</h2>
-          <p class="project-card__description">
-            A practical behavior-change toolkit for building repeatable routines 
-            under real-life constraints.
-          </p>
-          <div class="project-card__links">
-            <a href="#" class="project-card__link">Read (Interactive)</a>
-            <a href="#" class="project-card__link">Download PDF</a>
-          </div>
+          <a href="#" class="project-card__link">
+            <h2 class="project-card__title">Designing for Consistency</h2>
+            <p class="project-card__description">
+              A practical behavior-change toolkit for building repeatable routines 
+              under real-life constraints.
+            </p>
+          </a>
+          <a href="#" class="project-card__cta">View Project →</a>
         </article>
 
       </section>
