--- a/work.html
+++ b/work.html
@@ -45,14 +45,14 @@
 
         <!-- Project 1 -->
         <article class="project-card">
-          <a href="project-template.html" class="project-card__link">
+          <a href="adherence-ecosystem.html" class="project-card__link">
             <h2 class="project-card__title">The Adherence Ecosystem</h2>
             <p class="project-card__description">
               A systems-based framework examining why linear fitness models fail women 
               and how adherence can be designed instead.
             </p>
           </a>
-          <a href="project-template.html" class="project-card__cta">View Project →</a>
+          <a href="adherence-ecosystem.html" class="project-card__cta">View Project →</a>
         </article>
 
         <!-- Project 2 -->
