--- a/adherence-ecosystem.html
+++ b/adherence-ecosystem.html
@@ -68,7 +68,7 @@
 
         <!-- Primary Actions -->
         <div class="project-header__actions">
-          <a href="https://gamma.app/docs/adherence-ecosystem-framework-0s5pnap2bzoemzb" class="btn btn--primary btn--large">Read Interactive</a>
+          <a href="adherence-ecosystem-web.html" class="btn btn--primary btn--large">Read on Web</a>
           <a href="pdfs/kayleigh-gomez_adherence-ecosystem_framework.pdf" class="btn btn--large">Download PDF</a>
         </div>
       </header>
