--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     <nav class="nav container">
       <a href="index.html" class="nav__link nav__link--active">Home</a>
       <a href="work.html" class="nav__link">Work</a>
-      <a href="shop.html" class="nav__link">Shop</a>
+      <!-- <a href="shop.html" class="nav__link">Shop</a> -->
+      <a href="outcomes.html" class="nav__link">Outcomes</a>
       <a href="about.html" class="nav__link">About</a>
     </nav>
   </header>
