Outcomes Page Edits

--- a/outcomes.html
+++ b/outcomes.html
@@ -35,19 +35,18 @@
       <header class="outcomes-header">
         <h1 class="outcomes-header__title">Observed Training Outcomes</h1>
         <p class="outcomes-header__subtitle">
-          Archive view — Anonymized cases — 2022–2025
+          Archive View — Client-Shared Cases (2022–2025)
         </p>
       </header>
 
       <!-- Framing Block -->
       <section class="outcomes-framing">
         <p>
-          This archive presents selected examples from women who have participated in structured online training programs I’ve designed and coached.
+          This archive presents selected examples from women who participated in structured online training programs I’ve designed and coached.
 
-          Each case reflects real-world training over time and is shared to illustrate patterns in consistency, adaptation, and response across different systems.
+The cases are shared to illustrate how different training systems are experienced over time, with a focus on consistency, adaptation, and real-world application.
 
-          All clients shown have provided permission for their images and general program details to be shared in this format. Identifying information has been removed.
-        </p>
+Each entry reflects an individual training context and highlights broader patterns observed across online coaching environments.
       </section>
 
       <!-- Filters -->
@@ -76,6 +75,11 @@
       <!-- Case Grid -->
       <div class="outcomes-grid" id="casesGrid">
         <!-- Cases will be populated by JavaScript -->
+      </div>
+
+      <!-- Consent Disclaimer -->
+      <div class="outcomes-consent">
+        <p>All individuals shown have provided consent for their images and anonymized training details to be shared.</p>
       </div>
 
     </div>
