--- a/outcomes.html
+++ b/outcomes.html
@@ -105,94 +105,25 @@ Each entry reflects an individual training context and highlights broader patter
   </footer>
 
   <!-- ========== Case Data & Scripts ========== -->
-  <script>
-    // Case data structure
-    const cases = [
-      {
-        id: "KG-2024-037",
-        focus: "strength",
-        duration: 12,
-        ageRange: "25-29",
-        constraints: ["Inconsistent schedule", "Limited equipment"],
-        changes: [
-          "Increased lower body strength (measured via bodyweight movements)",
-          "Improved movement efficiency in hip hinge patterns",
-          "Established 3-4x/week training frequency"
-        ],
-        beforeImage: "https://images.unsplash.com/photo-1517836357463-d25dfeac3438?w=400&h=600&fit=crop",
-        afterImage: "https://images.unsplash.com/photo-1571019614242-c5c5dee9f50b?w=400&h=600&fit=crop"
-      },
-      {
-        id: "KG-2023-142",
-        focus: "consistency",
-        duration: 16,
-        ageRange: "30-34",
-        constraints: ["Shift work", "High stress environment"],
-        changes: [
-          "Maintained training frequency through 3 schedule disruptions",
-          "Reduced training friction via environment design",
-          "Observable muscle retention during weight loss phase"
-        ],
-        beforeImage: "https://images.unsplash.com/photo-1518611012118-696072aa579a?w=400&h=600&fit=crop",
-        afterImage: "https://images.unsplash.com/photo-1544367567-0f2fcb009e0b?w=400&h=600&fit=crop"
-      },
-      {
-        id: "KG-2024-089",
-        focus: "cycle-aware",
-        duration: 20,
-        ageRange: "25-29",
-        constraints: ["Symptomatic luteal phase", "Variable energy availability"],
-        changes: [
-          "Improved adherence via phase-specific training adjustments",
-          "Increased training volume in follicular phase",
-          "Maintained consistency across full menstrual cycles"
-        ],
-        beforeImage: "https://images.unsplash.com/photo-1571019613454-1cb2f99b2d8b?w=400&h=600&fit=crop",
-        afterImage: "https://images.unsplash.com/photo-1594381898411-846e7d193883?w=400&h=600&fit=crop"
-      },
-      {
-        id: "KG-2023-215",
-        focus: "hybrid",
-        duration: 14,
-        ageRange: "35-39",
-        constraints: ["Limited recovery capacity", "Home training only"],
-        changes: [
-          "Built upper body strength via progressive overload",
-          "Established sustainable training rhythm",
-          "Improved body composition via strength + nutrition structure"
-        ],
-        beforeImage: "https://images.unsplash.com/photo-1518310383802-640c2de311b2?w=400&h=600&fit=crop",
-        afterImage: "https://images.unsplash.com/photo-1552196563-55cd4e45efb3?w=400&h=600&fit=crop"
-      },
-      {
-        id: "KG-2024-156",
-        focus: "strength",
-        duration: 10,
-        ageRange: "30-34",
-        constraints: ["Beginner to resistance training", "Time-constrained"],
-        changes: [
-          "Developed foundational movement patterns",
-          "Progressive load increases across major lifts",
-          "Increased lean mass via structured programming"
-        ],
-        beforeImage: "https://images.unsplash.com/photo-1549576490-b0b4831ef60a?w=400&h=600&fit=crop",
-        afterImage: "https://images.unsplash.com/photo-1550345332-09e3ac987658?w=400&h=600&fit=crop"
-      },
-      {
-        id: "KG-2023-278",
-        focus: "consistency",
-        duration: 18,
-        ageRange: "40-44",
-        constraints: ["Previous program-hopping history", "Motivation inconsistency"],
-        changes: [
-          "Maintained training for 18 consecutive weeks",
-          "Built habit infrastructure independent of motivation",
-          "Observable strength progression via tracked metrics"
-        ],
-        beforeImage: "https://images.unsplash.com/photo-1518611012118-696072aa579a?w=400&h=600&fit=crop",
-        afterImage: "https://images.unsplash.com/photo-1571019613454-1cb2f99b2d8b?w=400&h=600&fit=crop"
-      }
-    ];
+  <script type="module">
+    // Import case data from case-loader
+    import { getAllCases } from './cases/case-loader.js';
+    
+    // Get all consented cases and transform to display format
+    const allCasesData = getAllCases();
+    console.log('Loaded cases:', allCasesData);
+    const cases = allCasesData.map(c => ({
+      id: c.id,
+      slug: c.slug,
+      focus: c.metadata.systemFocus,
+      duration: c.metadata.durationWeeks,
+      ageRange: c.metadata.ageRange,
+      constraints: c.constraints,
+      changes: c.observedChanges,
+      beforeImage: c.images.before,
+      afterImage: c.images.after
+    }));
+    console.log('Transformed cases:', cases);
 
     // Filter state
     let activeFilters = {
@@ -279,6 +210,11 @@ Each entry reflects an individual training context and highlights broader patter
               <ul>
                 ${caseData.changes.map(c => `<li>${c}</li>`).join('')}
               </ul>
+            </div>
+            <div class="case-detail__report-link">
+              <a href="case-report.html?case=${caseData.slug}" class="case-report-btn">
+                View Full Report →
+              </a>
             </div>
             <div class="case-detail__disclaimer">
               <p>Individual case. Variables including adherence, baseline fitness, nutrition environment, and biological factors influence outcomes. Not a guarantee of results.</p>
