--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       </p>
       <div class="hero__actions">
         <a href="work.html" class="btn btn--primary">View Work</a>
-        <a href="shop.html" class="btn">Shop</a>
+        <a href="outcomes.html" class="btn">Outcomes</a>
       </div>
     </section>
 
