--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <nav class="nav container">
       <a href="index.html" class="nav__link nav__link--active">Home</a>
       <a href="work.html" class="nav__link">Work</a>
-      <!-- <a href="shop.html" class="nav__link">Shop</a> -->
-      <a href="outcomes.html" class="nav__link">Outcomes</a>
+      <a href="shop.html" class="nav__link">Shop</a>
+      <!-- <a href="outcomes.html" class="nav__link">Outcomes</a> -->
       <a href="about.html" class="nav__link">About</a>
     </nav>
   </header>
@@ -40,7 +40,7 @@
       </p>
       <div class="hero__actions">
         <a href="work.html" class="btn btn--primary">View Work</a>
-        <a href="outcomes.html" class="btn">Outcomes</a>
+        <a href="shop.html" class="btn">Shop</a>
       </div>
     </section>
 
