--- a/outcomes.html
+++ b/outcomes.html
@@ -21,9 +21,9 @@
     <nav class="nav container">
       <a href="index.html" class="nav__link">Home</a>
       <a href="work.html" class="nav__link">Work</a>
-      <!-- <a href="shop.html" class="nav__link">Shop</a> -->
+      <a href="shop.html" class="nav__link">Shop</a>
       <a href="about.html" class="nav__link">About</a>
-      <a href="outcomes.html" class="nav__link nav__link--active">Outcomes</a>
+      <!-- <a href="outcomes.html" class="nav__link nav__link--active">Outcomes</a> -->
     </nav>
   </header>
 
