--- a/shop.html
+++ b/shop.html
@@ -22,7 +22,7 @@
       <a href="index.html" class="nav__link">Home</a>
       <a href="work.html" class="nav__link">Work</a>
       <a href="shop.html" class="nav__link nav__link--active">Shop</a>
-      <a href="outcomes.html" class="nav__link">Outcomes</a>
+      <!-- <a href="outcomes.html" class="nav__link">Outcomes</a> -->
       <a href="about.html" class="nav__link">About</a>
     </nav>
   </header>
